change fixed footer z-index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -195,7 +195,7 @@ body{
 	-webkit-box-shadow: 0 0 7px #ccc;
 	box-shadow: 0 0 7px #ccc;
 	-moz-box-shadow: 0 0 7px #ccc;
-	z-index: 500;
+	z-index: 10000;
 	font-size: 1em;
 	width:100%;
 	bottom:0px;
